[tool.poetry]
name = "ESMM-pytorch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
numpy = "^1"
polars = "^1.25.0"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
